package com.example.signalserver.model.enums;

public enum ConnectionStatus {
    CONNECTING, CONNECTED, RECONNECTING, DISCONNECTED, FAILED
}
