package com.example.signalserver.model.enums;

public enum EventType {
    USER_JOINED, USER_LEFT, VIDEO_TOGGLED, AUDIO_TOGGLED,
    SCREEN_SHARE_STARTED, SCREEN_SHARE_STOPPED, ROOM_CREATED,
    ROOM_ENDED, MESSAGE_SENT, RECORDING_STARTED, RECORDING_STOPPED
}
