package com.example.signalserver.model.enums;

public enum RoomStatus {
    ACTIVE, INACTIVE, ENDED, SUSPENDED
}
