package com.example.signalserver.model.enums;

public enum RoomType {
    PUBLIC, PRIVATE, SCHEDULED
}
