package com.example.signalserver.model.enums;

public enum UserStatus {
    ONLINE, OFFLINE, DELETED, BANNED
}
